@@ -1,4 +1,5 @@
 2009-04-20 Kazuhiko
+* add Zuite_CommonTemplate that should a common template for all functional tests.
 * add TestTool_getSkinName and TestTool_setSkinNameCookie so as to unify functional tests for normal skin and mobile skin.
 
 2009-02-03 Kazuhiko
